Fixed spacing of content on job board page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -98,19 +98,21 @@ font-size: 30px;
 padding-bottom: 20px;
 }
 
-.search-bar{
-    margin-top: 20px;
-    margin-bottom: 40px;
-    align-content: center;
-}
+
 
 .dashboard-content{
 padding-top: 30px;
 padding-bottom: 30px;
 }
 
+/* JOB BOARD STYLING */
+
+.search-bar{
+    margin-top: 30px;
+    margin-bottom: 60px;
+    align-content: center;
+}
 
 .opportunity-post{
-  margin-top: 30px;
-  margin-bottom: 30px;  
+  margin-top: 40px;  
 }
