--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,10 +10,9 @@
 
 
 .footer {
-  margin-top: 50px;
+  margin-top: 40px;
   overflow: hidden;
   background-color: #e7e7e7;
-  bottom: 0;
   width: 100%;
   height: 10rem; 
   
